# music-notation-rs

./: .gitignore  Cargo.toml  Readme.md
examples/with_egui/: main.rs  player.rs
src/: lib.rs
src/instrument/: guitar.rs
src/note/: articulation.rs  mod.rs  rhythm.rs  time.rs
src/note/harmony/: chroma.rs  interval.rs  key_signature.rs  mod.rs  pitch.rs
src/note/rhythm/: duration.rs  grid.rs  mod.rs  time.rs
src/score/: edit.rs  mod.rs  rendering.rs
