[package]
name = "music_data"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = 'thin'

[dependencies]
midly = { version = "0.5.3", optional = true , features = ["std"], default-features = false }
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"], optional = true }

[dev-dependencies]
eframe = "0.28.1"
egui = "0.28.1"

[features]
default = ["midly", "serde"]
