[package]
name = "music-notation"
version = "0.1.0"
edition = "2021"
description = "A library for music theory and notation. Eventually, this is meant to be the basis for a music composition program."
license = "MIT"

[dependencies]
midly = { version = "0.5.3", optional = true , features = ["std"], default-features = false }
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"], optional = true }

[dev-dependencies]
eframe = "0.28.1"
egui = "0.28.1"
cpal = "0.15.3"

[features]
default = ["midly", "serde"]
